--- a/layout.css
+++ b/layout.css
@@ -12,7 +12,8 @@
   float: left;
   width: 24.9%;
   height: 100%;
-}
+  background-color: white;
+  }
 
 .sidebar-top {
   position: relative;
@@ -24,6 +25,7 @@
   position: relative;
   height: 12%;
   border-bottom: 1px solid lightgray;
+  background-color: white;
 }
 
 .learn-more {
@@ -31,11 +33,12 @@
   height: 10%;
   width: 100%;
   border-right: 1px solid lightgray;
+  background-color: white;
 }
 
 .bottom-main {
   position: relative;
-  height: 123%;
+  height: 124%;
   width: 100%;
   background-color: rgb(37, 50, 55);
 }
@@ -45,30 +48,29 @@
   width: 100%;
   height: 70%;
   border-right: 1px solid lightgray;
-}
-
-.sidebar-images {
-  position: relative;
-  margin-top: -15px;
-  height: 170%;
-  width: 100%;
+  background-color: white;
 }
 
 .bottom-sidebar {
   position: relative;
-  width: 65%;
-  margin: 11px;
+  width: 100%;
+  padding-left: 11px;
+  padding-bottom: 11px;
   color: rgb(0, 151, 138);
   font-size: 1.3rem;
   text-decoration: underline;
+  background-color: white;
+  margin: 0;
 }
 
 .bottom-closing {
   position: relative;
   width: 100%;
-  height: 20%;
+  height: 40%;
   background-color: rgb(37, 50, 55);
   font-size: 1.1rem;
+  border: 1px solid  gray;
+  border-bottom: none;
 }
 
 .sidebar-centering {
@@ -92,4 +94,5 @@
 
 .relative {
   position: relative;
+  height: 100%;
 }
