--- a/public/modules.css
+++ b/public/modules.css
@@ -2,6 +2,8 @@
   margin-bottom: 0;
   padding-left: 0;
   margin-top: 0;
+  height: 70%;
+  width: 100%;
 }
 
 .alternate-logo {
@@ -37,15 +39,11 @@
 
 .banner {
   position: relative;
-  height: 25%;
   width: 100%;
+  height: 25%;
   background: url(coffee.png);
   background-size: cover;
   background-repeat: no-repeat;
-}
-
-.banner-img {
-  width: 100%;
 }
 
 .banner-text {
@@ -90,8 +88,11 @@
 }
 
 .sidebar-images {
+  position: relative;
   margin-top: 0;
-  border: 1px solid lightgray;
+  height: 170%;
+  width: 100%;
+  background-color: white;
 }
 
 .brook {
@@ -218,7 +219,8 @@
 .close {
   position: absolute;
   right: 5%;
-  margin-top: 25px;
+  top: 40%;
+  transform: translateY(-40%);
   color: rgb(0, 151, 138);
   font-size: 1.4rem;
   z-index: 10;
@@ -268,4 +270,8 @@
 #brook-job {
   font-size: 1.4rem;
   margin-top: -18px;
+}
+
+.sidebar-ul-container {
+  margin-bottom: 0;
 }
